--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -18,8 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         sudo apt-get update
-        sudo apt-get install octave
-        sudo apt-get install liboctave-dev
+        sudo apt-get install -y octave
     - name: Run unit tests
       run: |
         pushd tests
