--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -26,13 +26,22 @@ jobs:
         octave test_PCA.m
         octave test_kernel.m
         octave test_kPCA.m
+        octave test_new_features.m
+        octave test_stability.m
         popd
-    - name: Run demos
+    - name: Run demo1
       run: |
         pushd demo1
         octave demo_SyntheticData.m
         popd
+    - name: Run demo2
+      run: |
         # Skipping demo2 because it requires the octave-statistics package
+        # pushd demo2
+        # octave demo_YaleFace.m
+        # popd
+    - name: Run demo3
+      run: |
         pushd demo3
         octave demo_faceASM_PCA.m
         octave demo_faceASM_kPCA.m
