refactor: improve theoretical accuracy, efficiency, and robustness
- Fixed kPCA projection to use centered kernel matrix for correct feature space mapping.
- Implemented efficient centering statistics pipeline, achieving 2.2x speedup in kPCA_NewData.
- Resolved eigenvector sorting bug in kPCA.m to ensure mathematically precise output.
- Enhanced kPCA_PreImage.m with multiple restarts and optional initial guess (z0) for stable reconstruction (Mika et al.).
- Extended distanceMatrix.m to support cross-distance calculation between different datasets.
- Added classify_1nn.m and is_octave.m for standalone environment portability in GNU Octave.
- Standardized test suite by renaming to test_extensions.m and updating CI workflows.

--- a/.github/workflows/octave.yml
+++ b/.github/workflows/octave.yml
@@ -26,7 +26,7 @@ jobs:
         octave test_PCA.m
         octave test_kernel.m
         octave test_kPCA.m
-        octave test_new_features.m
+        octave test_extensions.m
         octave test_stability.m
         popd
     - name: Run demo1
@@ -36,10 +36,9 @@ jobs:
         popd
     - name: Run demo2
       run: |
-        # Skipping demo2 because it requires the octave-statistics package
-        # pushd demo2
-        # octave demo_YaleFace.m
-        # popd
+        pushd demo2
+        octave demo_YaleFace.m
+        popd
     - name: Run demo3
       run: |
         pushd demo3
